개선 사항 커밋

--- a/WaferAlign/Application/Application.csproj
+++ b/WaferAlign/Application/Application.csproj
@@ -101,5 +101,8 @@
   <ItemGroup>
     <Content Include="Readme.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
