--- a/VisionAlignChamber/VisionAlignChamber.csproj
+++ b/VisionAlignChamber/VisionAlignChamber.csproj
@@ -3,18 +3,38 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x64</Platform>
     <ProjectGuid>{1FF49A28-7059-4260-A7ED-35115BCCBF32}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>VisionAlignChamber</RootNamespace>
     <AssemblyName>VisionAlignChamber</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
+    <PlatformTarget>x64</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
+    <PlatformTarget>x64</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +44,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -44,8 +64,21 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <!-- eMotionAlign.dll 참조 -->
+    <Reference Include="eMotionAlign">
+      <HintPath>Vision\eMotion\DLLs\eMotionAlign.dll</HintPath>
+    </Reference>
+    <!-- OpenCvSharp 참조 -->
+    <Reference Include="OpenCvSharp">
+      <HintPath>Vision\eMotion\DLLs\OpenCvSharp.dll</HintPath>
+    </Reference>
+    <!-- Newtonsoft.Json 참조 -->
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Vision\eMotion\DLLs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <!-- 기존 파일 -->
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +87,43 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <!-- 인터페이스 -->
+    <Compile Include="Interfaces\IMotionController.cs" />
+    <Compile Include="Interfaces\IDigitalIO.cs" />
+    <Compile Include="Interfaces\IVisionProcessor.cs" />
+    <!-- 하드웨어 공통 -->
+    <Compile Include="Hardware\Common\AxisParameter.cs" />
+    <Compile Include="Hardware\Common\MotionStatus.cs" />
+    <Compile Include="Hardware\Common\ErrorCode.cs" />
+    <!-- 아진 Wrapper -->
+    <Compile Include="Hardware\Ajin\Wrapper\AXA.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXC.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXD.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXDev.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXHD.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXHS.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXL.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXM.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXP.cs" />
+    <Compile Include="Hardware\Ajin\Wrapper\AXS.cs" />
+    <!-- 아진 컨트롤러 -->
+    <Compile Include="Hardware\Ajin\AjinMotionController.cs" />
+    <Compile Include="Hardware\Ajin\AjinDigitalIO.cs" />
+    <!-- I/O 추상화 -->
+    <Compile Include="Hardware\IO\IODefinition.cs" />
+    <Compile Include="Hardware\IO\IOMapping.cs" />
+    <Compile Include="Hardware\IO\VisionAlignerIO.cs" />
+    <Compile Include="Hardware\IO\VisionAlignerMotion.cs" />
+    <!-- 비전 -->
+    <Compile Include="Vision\VisionAlignWrapper.cs" />
+    <!-- 모델 -->
+    <Compile Include="Models\WaferAlignResult.cs" />
+    <Compile Include="Models\IOMap.cs" />
+    <!-- 설정 -->
+    <Compile Include="Config\AppSettings.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +132,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +146,28 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <!-- 설정 파일 -->
+    <Content Include="Config\Settings.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <!-- DLL 파일 복사 설정 -->
+    <Content Include="Hardware\Ajin\DLLs\AXL.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Hardware\Ajin\DLLs\EzBasicAxl.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Vision\eMotion\DLLs\eMotionAlign.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Vision\eMotion\DLLs\OpenCvSharp.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Vision\eMotion\DLLs\Newtonsoft.Json.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
