개선 내용 커밋

--- a/VisionAlignChamber/Config/Settings.ini
+++ b/VisionAlignChamber/Config/Settings.ini
@@ -85,23 +85,34 @@ CenteringRoller_Close=0,7
 ;=============================================================================
 
 [Motion_Axis]
+; 축 활성화 설정 (true/false) - 테스트 시 특정 축만 사용 가능
 ; Wedge Up/Down Stage (Servo)
 WedgeUpDown=0
+WedgeUpDown_Enabled=true
 WedgeUpDown_Velocity=10000
 WedgeUpDown_Accel=50000
 WedgeUpDown_Decel=50000
 
 ; Chuck Rotation (DD Motor)
 ChuckRotation=1
+ChuckRotation_Enabled=true
 ChuckRotation_Velocity=5000
 ChuckRotation_Accel=30000
 ChuckRotation_Decel=30000
 
-; Centering Stage (Stepping)
-CenteringStage=2
-CenteringStage_Velocity=8000
-CenteringStage_Accel=40000
-CenteringStage_Decel=40000
+; Centering Stage 1 (Stepping)
+CenteringStage_1=2
+CenteringStage_1_Enabled=true
+CenteringStage_1_Velocity=8000
+CenteringStage_1_Accel=40000
+CenteringStage_1_Decel=40000
+
+; Centering Stage 2 (Stepping)
+CenteringStage_2=3
+CenteringStage_2_Enabled=true
+CenteringStage_2_Velocity=8000
+CenteringStage_2_Accel=40000
+CenteringStage_2_Decel=40000
 
 ;=============================================================================
 ; Motion Position 설정
