Eddy 기능 추가 챔버 Status 관리 추가

--- a/VisionAlignChamber/Config/Settings.ini
+++ b/VisionAlignChamber/Config/Settings.ini
@@ -1,3 +1,13 @@
+;=============================================================================
+; System 설정
+;=============================================================================
+
+[System]
+; 시뮬레이션 모드 (true/false)
+; true: 하드웨어 없이 UI 테스트 가능 (Initialize/Home 없이 Auto 모드 전환 가능)
+; false: 실제 하드웨어 운영 모드 (Initialize → Home → Auto 순서 필요)
+Simulation=true
+
 [DLL]
 ; AJIN EtherCAT DLL 경로 설정
 ; 빈 값이면 기본 경로(실행 파일 폴더)에서 로드
@@ -53,10 +63,6 @@ LiftPin_Down=0,6
 WedgeStage_Up=0,7
 WedgeStage_Down=0,8
 
-; Centering Roller Position Sensor
-CenteringRoller_Open=0,9
-CenteringRoller_Close=0,10
-
 ; P/N Checker
 PNChecker_Positive=0,11
 PNChecker_Negative=0,12
@@ -73,10 +79,6 @@ Chuck_VacuumSol=0,4
 
 ; Vision Light
 Vision_Light=0,5
-
-; Centering Roller Control
-CenteringRoller_Open=0,6
-CenteringRoller_Close=0,7
 
 ;=============================================================================
 ; Vision Aligner Motion Axis 매핑
