--- a/VisionAlignChamber/VisionAlignChamber.csproj
+++ b/VisionAlignChamber/VisionAlignChamber.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <!-- 기존 파일 -->
+    <Compile Include="Core\EventManager.cs" />
     <Compile Include="Eddy\EddyCurrentSensor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -197,6 +198,9 @@
     </Compile>
     <EmbeddedResource Include="Views\Controls\AxisControlPanel.resx">
       <DependentUpon>AxisControlPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
