--- a/VisionAlignChamber/VisionAlignChamber.csproj
+++ b/VisionAlignChamber/VisionAlignChamber.csproj
@@ -13,6 +13,8 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -53,8 +55,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=5.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>packages\NLog.5.2.8\lib\net46\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite, Version=1.0.119.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <HintPath>packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\lib\net46\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,6 +88,12 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>Vision\eMotion\DLLs\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <!-- SQLite 참조 -->
+    <!-- Dapper 참조 -->
+    <Reference Include="Dapper">
+      <HintPath>Database\DLLs\Dapper.dll</HintPath>
+    </Reference>
+    <!-- NLog 참조 -->
   </ItemGroup>
   <ItemGroup>
     <!-- 기존 파일 -->
@@ -125,6 +141,16 @@
     <Compile Include="Hardware\Facade\VisionAlignerMotion.cs" />
     <!-- Core (비즈니스 로직) -->
     <Compile Include="Core\VisionAlignerSystem.cs" />
+    <!-- Interlock (알람/인터락 관리) -->
+    <Compile Include="Interlock\InterlockDefinition.cs" />
+    <Compile Include="Interlock\InterlockManager.cs" />
+    <Compile Include="Interlock\InterlockMonitor.cs" />
+    <!-- Database (데이터베이스) -->
+    <Compile Include="Database\DatabaseManager.cs" />
+    <Compile Include="Database\AlarmRepository.cs" />
+    <Compile Include="Database\Entities.cs" />
+    <!-- Log (로그) -->
+    <Compile Include="Log\LogManager.cs" />
     <!-- 비전 -->
     <Compile Include="Vision\VisionAlignWrapper.cs" />
     <!-- 모델 -->
@@ -146,6 +172,7 @@
     <Compile Include="ViewModels\IOViewModel.cs" />
     <Compile Include="ViewModels\VisionViewModel.cs" />
     <Compile Include="ViewModels\EddyViewModel.cs" />
+    <Compile Include="ViewModels\LogViewModel.cs" />
     <!-- Views -->
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
@@ -184,6 +211,12 @@
     <Compile Include="Views\Controls\EddyPanel.Designer.cs">
       <DependentUpon>EddyPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Controls\LogPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\Controls\LogPanel.Designer.cs">
+      <DependentUpon>LogPanel.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -200,10 +233,16 @@
     <EmbeddedResource Include="Views\Controls\AxisControlPanel.resx">
       <DependentUpon>AxisControlPanel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Controls\VisionPanel.resx">
+      <DependentUpon>VisionPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Log\DLLs\NLog.config" />
+    <Content Include="Log\DLLs\NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -229,9 +268,6 @@
     <Content Include="Hardware\Ajin\DLLs\EzBasicAxl.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Log\DLLs\NLog.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Vision\eMotion\DLLs\eMotionAlign.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -248,7 +284,18 @@
     <Content Include="Vision\eMotion\DLLs\opencv_videoio_ffmpeg4110_64.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <!-- SQLite DLL -->
+    <!-- Dapper DLL -->
+    <Content Include="Database\DLLs\Dapper.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>이 프로젝트는 이 컴퓨터에 없는 NuGet 패키지를 참조합니다. 해당 패키지를 다운로드하려면 NuGet 패키지 복원을 사용하십시오. 자세한 내용은 http://go.microsoft.com/fwlink/?LinkID=322105를 참조하십시오. 누락된 파일은 {0}입니다.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets'))" />
+  </Target>
 </Project>
