CTC(EFEM) 모듈 통신 인터페이스 추가 및 연결 확인

--- a/VisionAlignChamber/VisionAlignChamber.csproj
+++ b/VisionAlignChamber/VisionAlignChamber.csproj
@@ -163,6 +163,10 @@
     <Compile Include="Database\Entities.cs" />
     <!-- Log (로그) -->
     <Compile Include="Log\LogManager.cs" />
+    <!-- Communication (CTC 통신) -->
+    <Compile Include="Communication\Interfaces\ICTCCommunication.cs" />
+    <Compile Include="Communication\CTCCommServer.cs" />
+    <Compile Include="Communication\CTCCommController.cs" />
     <!-- 비전 -->
     <Compile Include="Vision\VisionAlignWrapper.cs" />
     <!-- 모델 -->
