--- a/VisionAlignChamber/packages.config
+++ b/VisionAlignChamber/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="NLog" version="5.2.8" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net48" />
