--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ x64/
 x86/
 [Bb]in/
 [Oo]bj/
-[Ll]og/
+
+# 로그 파일 (런타임 생성)
+*.log
 [Ll]ogs/
 
 # NuGet
@@ -36,10 +38,6 @@ x86/
 !**/Database/DLLs/*.dll
 !**/Communication/DLLs/*.dll
 !**/Log/DLLs/*.dll
-
-# 예외: Log 폴더의 소스 코드 파일
-!**/Log/*.cs
-!**/Log/DLLs/
 
 # User-specific files
 *.rsuser
