Alarm Manager 관련 내용 추가

--- a/VisionAlignChamber/Config/Parameter.ini
+++ b/VisionAlignChamber/Config/Parameter.ini
@@ -1,6 +1,45 @@
 ; Vision Align Chamber Teaching Parameters
 ; 4-Axis Teaching Position Configuration
-; 10-Step Sequence: Receive -> PreCtr(FOV) -> Ready -> ScanStart -> Scan(xN) -> Rewind -> Center(Radius) -> Eddy -> ThetaAlign -> Release
+; 9-Step Sequence: Receive -> PreCtr(FOV) -> Ready -> ScanStart -> Scan(xN) -> Rewind -> Align(Center+Theta) -> Eddy -> Release
+
+;=============================================================================
+; Motion Axis Configuration
+; 형식: 축이름=축번호
+; 각 축별 속도/가속도/감속도 설정
+;=============================================================================
+
+[Motion_Axis]
+; Wedge Up/Down Stage (Servo) - Chuck Z
+WedgeUpDown=0
+WedgeUpDown_Enabled=true
+WedgeUpDown_Velocity=10000
+WedgeUpDown_Accel=50000
+WedgeUpDown_Decel=50000
+
+; Chuck Rotation (DD Motor) - Theta
+ChuckRotation=1
+ChuckRotation_Enabled=true
+ChuckRotation_Velocity=5000
+ChuckRotation_Accel=30000
+ChuckRotation_Decel=30000
+
+; Centering Stage 1 (Stepping) - Centering L
+CenteringStage_1=2
+CenteringStage_1_Enabled=true
+CenteringStage_1_Velocity=8000
+CenteringStage_1_Accel=40000
+CenteringStage_1_Decel=40000
+
+; Centering Stage 2 (Stepping) - Centering R
+CenteringStage_2=3
+CenteringStage_2_Enabled=true
+CenteringStage_2_Velocity=8000
+CenteringStage_2_Accel=40000
+CenteringStage_2_Decel=40000
+
+;=============================================================================
+; Teaching Positions
+;=============================================================================
 
 [ChuckZ]
 ; Chuck Z Axis (Axis 0) Positions [pulse]
@@ -24,13 +63,36 @@ Home=0
 ScanStart=-180
 ScanEnd=180
 
-[Motion]
+;=============================================================================
+; Motion Position Settings
+;=============================================================================
+
+[Motion_Position]
+; Wedge Stage 위치 (pulse)
+WedgeStage_UpPos=100000
+WedgeStage_DownPos=0
+
+; Chuck 각도 변환 (pulse per degree)
+Chuck_PulsePerDegree=10000
+
+; Centering Stage 위치 (pulse)
+CenteringStage_OpenPos=50000
+CenteringStage_ClosePos=0
+CenteringStage_MarginUm=20
+
+;=============================================================================
 ; Default Motion Parameters
+;=============================================================================
+
+[Motion]
 DefaultVelocity=10000
 DefaultAccel=50000
 DefaultDecel=50000
 
-[VisionScan]
+;=============================================================================
 ; Vision Scan Parameters
+;=============================================================================
+
+[VisionScan]
 StepAngle=15
 ImageCount=24
