--- a/VisionAlignChamber/Config/Settings.ini
+++ b/VisionAlignChamber/Config/Settings.ini
@@ -26,12 +26,6 @@ eMotionAlign_Path=
 ; OpenCvSharp.dll 경로 (비어있으면 기본 경로 사용)
 OpenCvSharp_Path=
 
-[Motion]
-; 기본 모션 파라미터
-DefaultVelocity=10000
-DefaultAccel=50000
-DefaultDecel=50000
-
 [Camera]
 ; 카메라 설정
 ImageWidth=5120
@@ -81,54 +75,9 @@ Chuck_VacuumSol=0,4
 Vision_Light=0,5
 
 ;=============================================================================
-; Vision Aligner Motion Axis 매핑
-; 형식: 축이름=축번호
-; 각 축별 속도/가속도/감속도 설정 가능
+; Communication 설정
 ;=============================================================================
 
-[Motion_Axis]
-; 축 활성화 설정 (true/false) - 테스트 시 특정 축만 사용 가능
-; Wedge Up/Down Stage (Servo)
-WedgeUpDown=0
-WedgeUpDown_Enabled=true
-WedgeUpDown_Velocity=10000
-WedgeUpDown_Accel=50000
-WedgeUpDown_Decel=50000
-
-; Chuck Rotation (DD Motor)
-ChuckRotation=1
-ChuckRotation_Enabled=true
-ChuckRotation_Velocity=5000
-ChuckRotation_Accel=30000
-ChuckRotation_Decel=30000
-
-; Centering Stage 1 (Stepping)
-CenteringStage_1=2
-CenteringStage_1_Enabled=true
-CenteringStage_1_Velocity=8000
-CenteringStage_1_Accel=40000
-CenteringStage_1_Decel=40000
-
-; Centering Stage 2 (Stepping)
-CenteringStage_2=3
-CenteringStage_2_Enabled=true
-CenteringStage_2_Velocity=8000
-CenteringStage_2_Accel=40000
-CenteringStage_2_Decel=40000
-
-;=============================================================================
-; Motion Position 설정
-;=============================================================================
-
-[Motion_Position]
-; Wedge Stage 위치 (pulse)
-WedgeStage_UpPos=100000
-WedgeStage_DownPos=0
-
-; Chuck 각도 변환 (pulse per degree)
-Chuck_PulsePerDegree=10000
-
-; Centering Stage 위치 (pulse)
-CenteringStage_OpenPos=50000
-CenteringStage_ClosePos=0
-CenteringStage_MarginUm=20
+[Communication]
+; CTC 통신 포트 (VisionAlignChamber가 서버)
+CTCPort=9999
